--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -6,9 +6,9 @@ name: CD
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,4 +34,19 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-      
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-3
+
+      - name: Deploy CloudFormation stack
+        uses: aws-actions/amazon-cloudformation-action@v1
+        with:
+          stack-name: my-stack
+          template-file: STD.yml
+          parameters: |
+            KeyName=my-key-name
+            InstanceType=t2.micro
